[gd_scene load_steps=62 format=2]

[ext_resource path="res://scenes/main/CurrentCalculation.gd" type="Script" id=1]
[ext_resource path="res://global/fonts/nunito/static/Nunito-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://global/icons/icons8-backspace-96.png" type="Texture" id=3]
[ext_resource path="res://scenes/main/main.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.878431, 0.372549, 0.372549, 0.290196 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 4

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.482353, 0.470588, 0.560784, 0.231373 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.56276, 0.5478, 0.66, 0.239216 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 0.290196 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=15]
content_margin_left = 20.0
content_margin_right = 20.0
bg_color = Color( 0.827451, 0.721569, 1, 0.117647 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.827451, 0.721569, 1, 0.117647 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 12 )
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
LineEdit/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.878431, 0.878431, 0.878431, 1 )
LineEdit/styles/focus = SubResource( 9 )
LineEdit/styles/normal = SubResource( 10 )
LineEdit/styles/read_only = SubResource( 15 )
Panel/styles/panel = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.827451, 0.721569, 1, 0.117647 )
border_width_top = 1000
border_color = Color( 0.827451, 0.721569, 1, 0 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.827451, 0.721569, 1, 0.117647 )
border_width_top = 346
border_color = Color( 0.827451, 0.721569, 1, 0 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=13]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 80
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=16]
content_margin_left = 10.0
content_margin_right = 10.0

[sub_resource type="DynamicFont" id=17]
size = 80
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=22]
action = "back"

[sub_resource type="ShortCut" id=21]
shortcut = SubResource( 22 )

[sub_resource type="InputEventAction" id=23]
action = "open_bracket"

[sub_resource type="ShortCut" id=24]
shortcut = SubResource( 23 )

[sub_resource type="InputEventAction" id=25]
action = "close_bracket"

[sub_resource type="ShortCut" id=26]
shortcut = SubResource( 25 )

[sub_resource type="InputEventAction" id=27]
action = "divide"

[sub_resource type="ShortCut" id=28]
shortcut = SubResource( 27 )

[sub_resource type="InputEventAction" id=29]
action = "seven"

[sub_resource type="ShortCut" id=30]
shortcut = SubResource( 29 )

[sub_resource type="InputEventAction" id=61]
action = "eight"

[sub_resource type="ShortCut" id=32]
shortcut = SubResource( 61 )

[sub_resource type="InputEventAction" id=33]
action = "nine"

[sub_resource type="ShortCut" id=34]
shortcut = SubResource( 33 )

[sub_resource type="InputEventAction" id=35]
action = "multiply"

[sub_resource type="ShortCut" id=36]
shortcut = SubResource( 35 )

[sub_resource type="InputEventAction" id=37]
action = "four"

[sub_resource type="ShortCut" id=38]
shortcut = SubResource( 37 )

[sub_resource type="InputEventAction" id=39]
action = "five"

[sub_resource type="ShortCut" id=40]
shortcut = SubResource( 39 )

[sub_resource type="InputEventAction" id=41]
action = "six"

[sub_resource type="ShortCut" id=42]
shortcut = SubResource( 41 )

[sub_resource type="InputEventAction" id=43]
action = "subtract"

[sub_resource type="ShortCut" id=44]
shortcut = SubResource( 43 )

[sub_resource type="InputEventAction" id=45]
action = "one"

[sub_resource type="ShortCut" id=46]
shortcut = SubResource( 45 )

[sub_resource type="InputEventAction" id=47]
action = "two"

[sub_resource type="ShortCut" id=48]
shortcut = SubResource( 47 )

[sub_resource type="InputEventAction" id=49]
action = "three"

[sub_resource type="ShortCut" id=50]
shortcut = SubResource( 49 )

[sub_resource type="InputEventAction" id=51]
action = "add"

[sub_resource type="ShortCut" id=52]
shortcut = SubResource( 51 )

[sub_resource type="InputEventAction" id=53]
action = "full_erase"

[sub_resource type="ShortCut" id=54]
shortcut = SubResource( 53 )

[sub_resource type="InputEventAction" id=55]
action = "zero"

[sub_resource type="ShortCut" id=56]
shortcut = SubResource( 55 )

[sub_resource type="InputEventAction" id=57]
action = "dot"

[sub_resource type="ShortCut" id=58]
shortcut = SubResource( 57 )

[sub_resource type="InputEventAction" id=59]
action = "enter"

[sub_resource type="ShortCut" id=60]
shortcut = SubResource( 59 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 7 )
script = ExtResource( 4 )

[node name="Back" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_styles/panel = SubResource( 18 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="OutputWindow" type="Control" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )

[node name="Back" type="Panel" parent="VBoxContainer/OutputWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -15.0
custom_styles/panel = SubResource( 19 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/OutputWindow/Back"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PastCalculation" type="Label" parent="VBoxContainer/OutputWindow/Back/VBoxContainer"]
margin_right = 660.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 15 )
align = 2
valign = 1
clip_text = true

[node name="CurrentCalculation" type="Label" parent="VBoxContainer/OutputWindow/Back/VBoxContainer"]
margin_top = 104.0
margin_right = 660.0
margin_bottom = 455.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 14 )
custom_styles/normal = SubResource( 16 )
align = 2
valign = 2
autowrap = true
script = ExtResource( 1 )

[node name="InputWindow" type="Control" parent="VBoxContainer"]
margin_top = 504.0
margin_right = 720.0
margin_bottom = 1280.0
rect_min_size = Vector2( 0, 300 )
rect_pivot_offset = Vector2( -1165, -185 )
size_flags_vertical = 3

[node name="Back" type="Panel" parent="VBoxContainer/InputWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 15.0
margin_right = -30.0
margin_bottom = -30.0
custom_styles/panel = SubResource( 19 )

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/InputWindow/Back"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/InputWindow/Back/VBox"]
margin_right = 660.0
margin_bottom = 134.0
size_flags_vertical = 3
custom_constants/separation = 31

[node name="Erase" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox"]
margin_right = 141.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 21 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/InputWindow/Back/VBox/HBox/Erase"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.5
margin_top = -43.0
margin_right = 44.5
margin_bottom = 43.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="OpenBracket" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox"]
margin_left = 172.0
margin_right = 314.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 24 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox/OpenBracket"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 17 )
text = "("
align = 1
valign = 1

[node name="CloseBracket" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox"]
margin_left = 345.0
margin_right = 487.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 26 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox/CloseBracket"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 17 )
text = ")"
align = 1
valign = 1

[node name="Divide" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox"]
margin_left = 518.0
margin_right = 660.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 28 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox/Divide"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 17 )
text = "÷"
align = 1
valign = 1

[node name="HBox2" type="HBoxContainer" parent="VBoxContainer/InputWindow/Back/VBox"]
margin_top = 149.0
margin_right = 660.0
margin_bottom = 283.0
size_flags_vertical = 3
custom_constants/separation = 31

[node name="7" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox2"]
margin_right = 141.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 30 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox2/7"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "7"
align = 1
valign = 1

[node name="8" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox2"]
margin_left = 172.0
margin_right = 314.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 32 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox2/8"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "8"
align = 1
valign = 1

[node name="9" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox2"]
margin_left = 345.0
margin_right = 487.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 34 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox2/9"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "9"
align = 1
valign = 1

[node name="Multiply" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox2"]
margin_left = 518.0
margin_right = 660.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 36 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox2/Multiply"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -9.0
custom_fonts/font = SubResource( 17 )
text = "x"
align = 1
valign = 1

[node name="HBox3" type="HBoxContainer" parent="VBoxContainer/InputWindow/Back/VBox"]
margin_top = 298.0
margin_right = 660.0
margin_bottom = 432.0
size_flags_vertical = 3
custom_constants/separation = 31

[node name="4" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox3"]
margin_right = 141.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 38 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox3/4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "4"
align = 1
valign = 1

[node name="5" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox3"]
margin_left = 172.0
margin_right = 314.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 40 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox3/5"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "5"
align = 1
valign = 1

[node name="6" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox3"]
margin_left = 345.0
margin_right = 487.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 42 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox3/6"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "6"
align = 1
valign = 1

[node name="Subtract" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox3"]
margin_left = 518.0
margin_right = 660.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 44 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox3/Subtract"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "-"
align = 1
valign = 1

[node name="HBox4" type="HBoxContainer" parent="VBoxContainer/InputWindow/Back/VBox"]
margin_top = 447.0
margin_right = 660.0
margin_bottom = 581.0
size_flags_vertical = 3
custom_constants/separation = 31

[node name="1" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox4"]
margin_right = 141.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 46 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox4/1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "1"
align = 1
valign = 1

[node name="2" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox4"]
margin_left = 172.0
margin_right = 314.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 48 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox4/2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "2"
align = 1
valign = 1

[node name="3" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox4"]
margin_left = 345.0
margin_right = 487.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 50 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox4/3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "3"
align = 1
valign = 1

[node name="Add" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox4"]
margin_left = 518.0
margin_right = 660.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 52 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox4/Add"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "+"
align = 1
valign = 1

[node name="HBox5" type="HBoxContainer" parent="VBoxContainer/InputWindow/Back/VBox"]
margin_top = 596.0
margin_right = 660.0
margin_bottom = 731.0
size_flags_vertical = 3
custom_constants/separation = 31

[node name="FullErase" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox5"]
margin_right = 141.0
margin_bottom = 135.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 54 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox5/FullErase"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "C"
align = 1
valign = 1

[node name="0" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox5"]
margin_left = 172.0
margin_right = 314.0
margin_bottom = 135.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 56 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox5/0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "0"
align = 1
valign = 1

[node name="Dot" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox5"]
margin_left = 345.0
margin_right = 487.0
margin_bottom = 135.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 58 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox5/Dot"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 17 )
text = "."
align = 1
valign = 1

[node name="Calculate" type="Button" parent="VBoxContainer/InputWindow/Back/VBox/HBox5"]
margin_left = 518.0
margin_right = 660.0
margin_bottom = 135.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 60 )

[node name="Label" type="Label" parent="VBoxContainer/InputWindow/Back/VBox/HBox5/Calculate"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.854902, 0.811765, 1 )
custom_fonts/font = SubResource( 17 )
text = "="
align = 1
valign = 1

[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox/Erase" to="." method="_on_Erase_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox/OpenBracket" to="." method="_on_OpenBracket_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox/CloseBracket" to="." method="_on_CloseBracket_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox/Divide" to="." method="_on_Divide_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox2/7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox2/8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox2/9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox2/Multiply" to="." method="_on_Multiply_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox3/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox3/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox3/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox3/Subtract" to="." method="_on_Subtract_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox4/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox4/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox4/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox4/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox5/FullErase" to="." method="_on_FullErase_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox5/0" to="." method="_on_0_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox5/Dot" to="." method="_on_Dot_pressed"]
[connection signal="pressed" from="VBoxContainer/InputWindow/Back/VBox/HBox5/Calculate" to="." method="_on_Calculate_pressed"]
